--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 									<span class="image">
 										<img src="images/gc.png" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="https://www.google.com/">
 										<h2>PHP - MySql</h2>
 										<div class="content">
 											<p>Sitio simil Rapi, desarrollado en PHP, estructura mvc y base de datos MySql.</p>
