--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Ariel Martin - Desarrollador Web</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Ariel Martin</span>
+									<spam>- Desarrollador Web</span>
 								</a>
 
 							<!-- Nav -->
