testeando api phone

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 								</ul>
 							<ul class="icons">
 								<li><span class="icon solid style2 fa-phone" title="Fijo: 011-4485-7575"></span></li>
-								<li><h2 class="title">011-4485-7575</h2></li>
+								<li><h2 class="title"><a href="tel:+541157673825">011-4485-7575</h2></li>
 							</ul>
 							</section>
 							<ul class="copyright">
