--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									<span class="image">
 										<img src="images/gc.png" alt="" />
 									</span>
-									<a href="https://www.google.com/" target="_blank">
+									<a href="https://gastronomiacasanova.000webhostapp.com/" target="_blank">
 										<h2>PHP - MySql</h2>
 										<div class="content">
 											<p>Sitio simil Rapi, desarrollado en PHP, estructura mvc y base de datos MySql.</p>
