--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<!-- Logo -->
 								<a href="index.html" class="logo">
 									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Ariel Martin</span>
-									<spam>- Desarrollador Web</span>
+									<spam>- Porfolio personal de proyectos</span>
 								</a>
 
 							<!-- Nav -->
@@ -52,7 +52,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Porfolio personal de proyectos</h1>
+								<h1>Desarrollador Web</h1>
 								<p>Estos sitios están realizados en versiones beta testing con el objetivo de mostrar su funcionalidad. <br/>Están desarrollados con diferentes tecnologías y alojados de forma variada según la necesidad de la aplicación.</p>
 							</header>
 							<section class="tiles">
