se agrego imagen

--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/ec.png" alt="" />
 									</span>
-									<a href="pages/e-commerce/index.html">
-										<h2>Lorem</h2>
+									<a href="pages/e-commerce/index.html" target="_blank">
+										<h2>FRONT END</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Front-end desarrollado de cero, en HTML5, CSS3 y JS puro, sin Frameworks.</p>
 										</div>
 									</a>
 								</article>
