se agrego credivi

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Ariel Martin</span>
+									<span class="symbol"><img src="images/am.png" alt="" /></span><span class="title">Ariel Martin</span>
 									<spam>- Porfolio personal de proyectos</span>
 								</a>
 
@@ -43,7 +43,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="https://gastronomiacasanova.000webhostapp.com/" target="_blank">Gastronomia casanova</a></li>
 							<li><a href="pages/e-commerce/index.html" target="_blank">E-commerce</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
+							<li><a href="https://credivi.github.io/marketing/" target="_blank">Credivi</a></li>
 							<li><a href="#contacto">Contacto</a></li>
 						</ul>
 					</nav>
@@ -63,7 +63,7 @@
 									</span>
 									<a href="https://gastronomiacasanova.000webhostapp.com/" target="_blank">
 										<h2>PHP - MySql</h2>
-										<div class="content">
+										<div class="content" align="justify">
 											<p>Sitio simil Rapi, desarrollado en PHP, estructura mvc y base de datos MySql.</p>
 										</div>
 									</a>
@@ -75,21 +75,21 @@
 									</span>
 									<a href="pages/e-commerce/index.html" target="_blank">
 										<h2>FRONT END</h2>
-										<div class="content">
+										<div class="content" align="justify">
 											<p>Front-end desarrollado de cero, en HTML5, CSS3 y JS puro, sin Frameworks.</p>
 										</div>
 									</a>
 								</article>
 								
 								
-								<article class="style3">
+								<article class="">
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/credivi.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Feugiat</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+									<a href="https://credivi.github.io/marketing/" target="_blank">
+										<h2>Credivi</h2>
+										<div class="content" align="justify">
+											<p>Sitio comercial, desarrollado como web de una sola pagina responsive en HTML5/CSS3 bootstrap, jquery con links a redes sociales y formulario de contacto redirigido a un Google Form.</p>
 										</div>
 									</a>
 								</article>
