--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 							<article class="box style2">
 								<a href="#" id="url1" target="_blank" class="image featured" ><img id="image1" src="" alt="" /></a>
 								<h3><a href="#">Gastronomia Casanova</a></h3>
-								<p align="justify">Sitio desarrollado en HTML5 CSS3 y JS, Back-End en PHP y base de datos MySQL. Se encuentra alojado en el servidor WebHost000.</p>
+								<p align="justify">Sitio desarrollado en HTML5 CSS3 y JS, Back-End en PHP y base de datos MySQL. Se encuentra alojado en el servidor 000webhost.</p>
 							</article>
 						</div>
 
