--- a/index.html
+++ b/index.html
@@ -191,14 +191,14 @@
 							<form method="post" action="#" id="form">
 								<div class="row">
 									<div class="col-6 col-12-small">
-										<input type="text" name="name" id="name" placeholder="Name" />
+										<input type="text" name="name" id="name" placeholder="Nombre" required="true" />
 									</div>
 									<div class="col-6 col-12-small">
-										<input type="text" name="emailAddress" id="emailAddress" placeholder="Email" />
+										<input type="email" name="emailAddress" id="emailAddress" placeholder="Email" required="true" />
 									</div>
 
 									<div class="col-12">
-										<textarea name="message" id="message" placeholder="Message"></textarea>
+										<textarea name="message" id="message" placeholder="Mensaje" required="true"></textarea>
 									</div>
 									<div class="col-12">
 										<ul class="actions">
