--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<section class="box style1">
 								<span class="icon featured solid fa-desktop"></span>
 								<h3>Front-End</h3>
-								<p align="justify">HTML5, CSS3, JS, frameworks de CSS (bootstrap), librerias Js (Jquery), responsive design.</p>
+								<p align="justify">HTML5, CSS3, JS, frameworks de CSS (bootstrap, materialize), librerias Js (Jquery), responsive design.</p>
 							</section>
 						</div>
 
@@ -133,7 +133,7 @@
 							<article class="box style2">
 								<a href="#" id="url2" target="_blank" class="image featured"><img id="image2" src="" alt="" /></a>
 								<h3><a href="#">E-Commerce</a></h3>
-								<p align="justify">Front-End de comercio electronico desarrollado desde cero, sin frameworks, en HTML5, CSS3 y JavaScript.</p>
+								<p align="justify">Prototipo de comercio electronico desarrollado desde cero, sin frameworks, en HTML5, CSS3 y JavaScript.</p>
 							</article>
 						</div>
 
@@ -141,7 +141,7 @@
 							<article class="box style2">
 								<a href="#" id="url3" target="_blank" class="image featured"><img id="image3" src="" alt="" /></a>
 								<h3><a href="#">Credivi</a></h3>
-								<p align="justify">Sitio comercial desarrollado para terceros, diseño de página única y links de contacto (Whatsapp, GoogleForm, redes sociales, etc).</p>
+								<p align="justify">BETA de sitio comercial desarrollado para terceros, diseño de página única y links de contacto (Whatsapp, GoogleForm, redes sociales, etc).</p>
 							</article>
 						</div>
 
