--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured solid fa-mobile"></span>
+								<span class="icono featured fab fa-android"></span>								
 								<h3>Android</h3>
 								<p align="justify">Desarrollo de aplicaciones con Android Studio (Liberias: Butterknife, Picasso, GSON, Retrofit).</p>
 							</section>
