--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Buenas costumbres</h3>
+								<h3>Buenas Prácticas</h3>
 								<p align="justify">FirstMobile, Patrones de diseño (MVC, MVVM, etc), Usabilidad, Accesibilidad, Testing.</p>
 							</section>
 						</div>
@@ -122,24 +122,24 @@
 					<div class="row">
 
 						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" id="url1" target="_blank" class="image featured" ><img id="image1" src="" alt="" /></a>
+							<article class="box style2 zoom">
+								<a href="#" id="url1" target="_blank" class="image featured" ><img id="image1" src="" alt=""/></a>
 								<h3><a href="#">Gastronomia Casanova</a></h3>
 								<p align="justify">Sitio desarrollado en HTML5 CSS3 y JS, Back-End en PHP y base de datos MySQL. Se encuentra alojado en el servidor 000webhost.</p>
 							</article>
 						</div>
 
 						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" id="url2" target="_blank" class="image featured"><img id="image2" src="" alt="" /></a>
+							<article class="box style2 zoom">
+								<a href="#" id="url2" target="_blank" class="image featured"><img id="image2" src="" alt=""/></a>
 								<h3><a href="#">E-Commerce</a></h3>
 								<p align="justify">Prototipo de comercio electronico desarrollado desde cero, sin frameworks, en HTML5, CSS3 y JavaScript.</p>
 							</article>
 						</div>
 
 						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" id="url3" target="_blank" class="image featured"><img id="image3" src="" alt="" /></a>
+							<article class="box style2 zoom">
+								<a href="#" id="url3" target="_blank" class="image featured"><img id="image3" src="" alt=""/></a>
 								<h3><a href="#">Credivi</a></h3>
 								<p align="justify">BETA de sitio comercial desarrollado para terceros, diseño de página única y links de contacto (Whatsapp, GoogleForm, redes sociales, etc).</p>
 							</article>
