--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							<section class="box style1">
 								<span class="icon featured far fa-lightbulb"></span>
 								<h3>Otros conocimientos</h3>
-								<p align="justify">POO, SOA, UML, API REST, Docker, SEO, uso de repositorios (Git, Github, GitLab).</p>
+								<p align="justify">POO, SOA, UML, API REST, Docker, SEO, uso de repositorios (Git, Github, GitLab), metodologias ágiles (SCRUM).</p>
 							</section>
 						</div>
 
