se deshizo cambio

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 								<a href="#" id="url1" target="_blank" class="image featured" ><img id="image1" src="" alt=""/></a>
 								<h3><a href="#">Gastronomia Casanova</a></h3>
 								<p align="justify">Sitio desarrollado en HTML5 CSS3 y JS, Back-End en PHP y base de datos MySQL. Se encuentra alojado en el servidor 000webhost.</p>
-								<a class="source1" href="#" target="_blank" align="justify"></a>
+								<a class="source1" href="#" target="_blank"></a>
 							</article>
 						</div>
 
