--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 								<a href="#" id="url3" target="_blank" class="image featured"><img id="image3" src="" alt=""/></a>
 								<h3><a href="#">Credivi</a></h3>
 								<p align="justify">BETA de sitio comercial desarrollado para terceros, diseño de página única y links de contacto (Whatsapp, GoogleForm, redes sociales, etc).</p>
-								<a class="source3" href="#" target="_blank" ></a><br><br>
+								<a class="source3" href="#" target="_blank" ></a>
 							</article>
 						</div>
 
