se agreg{ó Evaluate

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2 zoom">
-								<a href="#" id="url1" target="_blank" class="image featured" ><img id="image1" src="" alt=""/></a>
-								<h3><a href="#">Gastronomia Casanova</a></h3>
+								<a href="#" id="url1" target="_blank" class="image featured url1"><img id="image1" src="" alt=""/></a>
+								<h3>Gastronomia Casanova</h3>
 								<p align="justify">Sitio desarrollado en HTML5 CSS3 y JS, Back-End en PHP y base de datos MySQL. Se encuentra alojado en el servidor 000webhost.</p>
 								<a class="source1" href="#" target="_blank"></a>
 							</article>
@@ -133,7 +133,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2 zoom">
 								<a href="#" id="url2" target="_blank" class="image featured"><img id="image2" src="" alt=""/></a>
-								<h3><a href="#">E-Commerce</a></h3>
+								<h3>E-Commerce</h3>
 								<p align="justify">Prototipo de comercio electronico desarrollado desde cero, sin frameworks, en HTML5, CSS3 y JavaScript.</p>
 								<a class="source2" href="#" target="_blank" ></a>
 							</article>
@@ -142,21 +142,22 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2 zoom">
 								<a href="#" id="url3" target="_blank" class="image featured"><img id="image3" src="" alt=""/></a>
-								<h3><a href="#">Credivi</a></h3>
+								<h3>Credivi</h3>
 								<p align="justify">BETA de sitio comercial desarrollado para terceros, diseño de página única y links de contacto (Whatsapp, GoogleForm, redes sociales, etc).</p>
 								<a class="source3" href="#" target="_blank" ></a>
 							</article>
 						</div>
 
-						<!--div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Tempus dolore</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+						<div class="col-4 col-6-medium col-12-small center-block">
+							<article class="box style2 zoom">
+								<a href="#" id="url4" target="_blank" class="image featured"><img id="image4" src="" alt="" /></a>
+								<h3>Evaluate</h3>
+								<p align="justify">Aplicacion WEB desarrollada para la TESIS de la tecnicatura en desarrollo web. Tecnologias de back-end PHP y mysql. Se encuentra alojado en el servidor 000webhost.</p>
+								<a class="source4" href="#" target="_blank" ></a>
 							</article>
 						</div>
 
-						<div class="col-4 col-6-medium col-12-small">
+						<!--div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 								<h3><a href="#">Feugiat aliquam</a></h3>
