--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 							</article>
 						</div>
 
-						<div class="col-4 col-6-medium col-12-small center-block">
+						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2 zoom">
 								<a href="#" id="url4" target="_blank" class="image featured"><img id="image4" src="" alt="" /></a>
 								<h3>Evaluate</h3>
