--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 							<article class="box style2 zoom">
 								<a href="#" id="url5" target="_blank" class="image featured"><img id="image5" src="" alt="" /></a>
 								<h3>CRUD PHP-MySql</h3>
-								<p align="justify">Código desarrollado para optimizar las operaciones entre PHP y MySql recibiendo los arrays directamente de los forms html y realizando las operaciones de CRUD requeridas.</p>
+								<p align="justify">Código desarrollado para optimizar las operaciones entre PHP y MySql recibiendo como entrada un arrays y realizando las operaciones de CRUD requeridas.</p>
 								<a class="source5" href="#" target="_blank" ></a>
 							</article>
 						</div>
