--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 							<article class="box style2 zoom">
 								<a href="#" id="url1" target="_blank" class="image featured url1"><img id="image1" src="" alt=""/></a>
 								<h3>Gastronomia Casanova</h3>
-								<p align="justify">Sitio desarrollado en HTML5 CSS3 y JS, Back-End en PHP y base de datos MySQL. Se encuentra alojado en el servidor 000webhost.</p>
+								<p align="justify">Sitio estilo RAPPI desarrollado en HTML5 CSS3 y JS, Back-End en PHP y base de datos MySQL. Se encuentra alojado en el servidor 000webhost.</p>
 								<a class="source1" href="#" target="_blank"></a>
 							</article>
 						</div>
@@ -161,7 +161,7 @@
 							<article class="box style2 zoom">
 								<a href="#" id="url5" target="_blank" class="image featured"><img id="image5" src="" alt="" /></a>
 								<h3>CRUD PHP-MySql</h3>
-								<p align="justify">Código desarrollado para optimizar las operaciones entre PHP y MySql recibiendo como entrada un arrays y realizando las operaciones de CRUD requeridas.</p>
+								<p align="justify">Código desarrollado para optimizar las operaciones entre PHP y MySql recibiendo como entrada de datos ARRAYS y realizando las operaciones de CRUD requeridas.</p>
 								<a class="source5" href="#" target="_blank" ></a>
 							</article>
 						</div>
