se agrego Control Nutricional

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<section class="box style1">
 								<span class="icon solid featured solid fa-file-code"></span>
 								<h3>Back-End</h3>
-								<p align="justify">Lenguajes de Back-end PHP, Java, .NET(C#). Hospeo y administracion de servidores.</p>
+								<p align="justify">Lenguajes de Back-end PHP, Java, .NET(C#), NodeJS. Hospeo y administracion de servidores.</p>
 							</section>
 						</div>
 
@@ -89,7 +89,7 @@
 							<section class="box style1">
 								<span class="icon featured far fa-lightbulb"></span>
 								<h3>Otros conocimientos</h3>
-								<p align="justify">POO, SOA, UML, API REST, Docker, SEO, uso de repositorios (Git, Github, GitLab), metodologias ágiles (SCRUM).</p>
+								<p align="justify">POO, SOA, UML, API REST, Maven, Spring MVC & Hibernate, GIT, metodologias ágiles (SCRUM).</p>
 							</section>
 						</div>
 
@@ -166,15 +166,16 @@
 							</article>
 						</div>
 
-						<!--div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Feugiat aliquam</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2 zoom">
+								<a href="#" id="url6" class="image featured"><img id="image6" src="" alt="" /></a>
+								<h3><a href="#"></a></h3>
+								<p align="justify"><b>Proyecto JAVA</b>, desarrollado con la tecnología MAVEN. Implementa los frameworks Spring MVC e Hibernate. La APP está pensada para que los profesional de la nutrición controlen la evolución de sus pacientes.</p>
+								<a class="source6" href="#" target="_blank" >dd</a>
 							</article>
 						</div>
 
-						<div class="col-4 col-6-medium col-12-small">
+						<!--<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 								<h3><a href="#">Sed amet ornare</a></h3>
