--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 					</div>
 					<footer>
 						<ul id="copyright">
-							<li>&copy; All rights reserved.</li><li>Design: <a href="#">Ariel Martin</a></li>
+							<li>&copy; All rights reserved.</li><li>Web developer: <a href="#">Ariel Martin</a></li>
 						</ul>
 					</footer>
 				</div>
