se agregó arielmartin.tk

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
 
 					</div>
 
-					<footer>
+					<!--footer>
 						<p></p>
 						<a href="#portfolio" class="button large scrolly">Proyetos</a>
-					</footer>
+					</footer-->
 
 				</div>
 			</article>
@@ -124,54 +124,63 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2 zoom">
 								<a href="#" id="url1" target="_blank" class="image featured url1"><img id="image1" src="" alt=""/></a>
-								<h3>Gastronomia Casanova</h3>
-								<p align="justify">Sitio estilo RAPPI desarrollado en HTML5 CSS3 y JS, Back-End en PHP y base de datos MySQL. Se encuentra alojado en el servidor 000webhost.</p>
-								<a class="source1" href="#" target="_blank"></a>
+								<h3 id="title1">Gastronomia Casanova</h3>
+								<p id="par1" align="justify">Sitio estilo RAPPI desarrollado en HTML5 CSS3 y JS, Back-End en PHP y base de datos MySQL. Se encuentra alojado en el servidor 000webhost.</p>
+								<a class="source1" href="#" target="_blank">Ver código fuente</a>
 							</article>
 						</div>
 
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2 zoom">
 								<a href="#" id="url2" target="_blank" class="image featured"><img id="image2" src="" alt=""/></a>
-								<h3>E-Commerce</h3>
-								<p align="justify">Prototipo de comercio electronico desarrollado desde cero, sin frameworks, en HTML5, CSS3 y JavaScript.</p>
-								<a class="source2" href="#" target="_blank" ></a>
+								<h3 id="title2">E-Commerce</h3>
+								<p id="par2" align="justify">Prototipo de comercio electronico desarrollado desde cero, sin frameworks, en HTML5, CSS3 y JavaScript.</p>
+								<a class="source2" href="#" target="_blank" >Ver código fuente</a>
 							</article>
 						</div>
 
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2 zoom">
 								<a href="#" id="url3" target="_blank" class="image featured"><img id="image3" src="" alt=""/></a>
-								<h3>Credivi</h3>
-								<p align="justify">BETA de sitio comercial desarrollado para terceros, diseño de página única y links de contacto (Whatsapp, GoogleForm, redes sociales, etc).</p>
-								<a class="source3" href="#" target="_blank" ></a>
+								<h3 id="title3">Credivi</h3>
+								<p id="par3" align="justify">BETA de sitio comercial desarrollado para terceros, diseño de página única y links de contacto (Whatsapp, GoogleForm, redes sociales, etc).</p>
+								<a class="source3" href="#" target="_blank" >Ver código fuente</a>
 							</article>
 						</div>
 
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2 zoom">
 								<a href="#" id="url4" target="_blank" class="image featured"><img id="image4" src="" alt="" /></a>
-								<h3>Evaluate</h3>
-								<p align="justify">Aplicacion WEB desarrollada para la TESIS de la tecnicatura en desarrollo web. Tecnologias de back-end PHP y mysql. Se encuentra alojado en el servidor 000webhost.</p>
-								<a class="source4" href="#" target="_blank" ></a>
+								<h3 id="title4">Evaluate</h3>
+								<p id="par4" align="justify">Aplicacion WEB desarrollada para la TESIS de la tecnicatura en desarrollo web. Tecnologias de back-end PHP y mysql. Se encuentra alojado en el servidor 000webhost.</p>
+								<a class="source4" href="#" target="_blank" >Ver código fuente</a>
 							</article>
 						</div>
 
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2 zoom">
 								<a href="#" id="url5" target="_blank" class="image featured"><img id="image5" src="" alt="" /></a>
-								<h3>CRUD PHP-MySql</h3>
-								<p align="justify">Código desarrollado para optimizar las operaciones entre PHP y MySql recibiendo como entrada de datos ARRAYS y realizando las operaciones de CRUD requeridas.</p>
-								<a class="source5" href="#" target="_blank" ></a>
+								<h3 id="title5"></h3>
+								<p id="par5" align="justify"></p>
+								<a class="source5" href="#" target="_blank" >Ver código fuente</a>
 							</article>
 						</div>
 
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2 zoom">
 								<a href="#" id="url6" class="image featured"><img id="image6" src="" alt="" /></a>
-								<h3><a href="#"></a></h3>
-								<p align="justify"><b>Proyecto JAVA</b>, desarrollado con la tecnología MAVEN. Implementa los frameworks Spring MVC e Hibernate. La APP está pensada para que los profesional de la nutrición controlen la evolución de sus pacientes.</p>
-								<a class="source6" href="#" target="_blank" >dd</a>
+								<h3 id="title6"><a href="#"></a></h3>
+								<p align="justify" id="par6"><b>Proyecto JAVA</b>, desarrollado con la tecnología MAVEN. Implementa los frameworks Spring MVC e Hibernate. La APP está pensada para que los profesional de la nutrición controlen la evolución de sus pacientes.</p>
+								<a class="source6" href="#" target="_blank" >Ver código fuente</a>
+							</article>
+						</div>
+
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2 zoom">
+								<a href="#" id="url7" class="image featured" target="_blank"><img id="image7" src="" alt="" /></a>
+								<h3 id="title7"><a href="#"></a></h3>
+								<p align="justify" id="par7"><b>Técnico Informático</b>, desarrollado con la tecnología MAVEN. Implementa los frameworks Spring MVC e Hibernate. La APP está pensada para que los profesional de la nutrición controlen la evolución de sus pacientes.</p>
+								<a class="source7" href="#" target="_blank" >Ver código fuente</a>
 							</article>
 						</div>
 
@@ -185,10 +194,10 @@
 
 					</div>
 
-					<footer>
+					<!--footer>
 						<p></p>
 						<a href="#contact" class="button large scrolly">Contacto</a>
-					</footer>
+					</footer-->
 				</div>
 			</article>
 
