Se agregó miniatura de la web

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 		<title class="titulo"></title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta property="og:site_name" content="Ariel Martin - Desarrollador Web" /> <!-- website name -->
+		<meta property="og:site" content="arielmartin.ml" /> <!-- website link -->
+		<meta property="og:title" content="Ariel Martin - Desarrollador Web"/> <!-- title shown in the actual shared post -->
+		<meta property="og:description" content="Reparación  de PCs" /> <!-- description shown in the actual shared post -->
+		<meta property="og:image" content="https://raw.githubusercontent.com/arielmartin/porfolio/master/images/am.png" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
