--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta property="og:site_name" content="Ariel Martin - Desarrollador Web" /> <!-- website name -->
 		<meta property="og:site" content="arielmartin.ml" /> <!-- website link -->
 		<meta property="og:title" content="Ariel Martin - Desarrollador Web"/> <!-- title shown in the actual shared post -->
-		<meta property="og:description" content="Reparación  de PCs" /> <!-- description shown in the actual shared post -->
+		<meta property="og:description" content="Porfolio Personal" /> <!-- description shown in the actual shared post -->
 		<meta property="og:image" content="https://raw.githubusercontent.com/arielmartin/porfolio/master/images/am.png" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
