Se agregó icono GIT

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icono featured fab fa-android"></span>								
-								<h3>Android</h3>
-								<p align="justify">Desarrollo de aplicaciones con Android Studio (Liberias: Butterknife, Picasso, GSON, Retrofit).</p>
+								<span class="icono featured fab fa-git-alt"></span>								
+								<h3>Control de Versiones</h3>
+								<p align="justify">Manejo de repositorios GIT, GITHUB, GITLAB (Ramas, Trabajo en equipo, Resolución de conflictos, etc.)</p>
 							</section>
 						</div>
 
@@ -96,7 +96,7 @@
 							<section class="box style1">
 								<span class="icon featured far fa-lightbulb"></span>
 								<h3>Otros conocimientos</h3>
-								<p align="justify">POO, SOA, UML, API REST, Maven, Spring MVC & Hibernate, GIT, metodologias ágiles (SCRUM).</p>
+								<p align="justify">POO, SOA, UML, API REST, Maven, Spring MVC & Hibernate, metodologias ágiles (SCRUM).</p>
 							</section>
 						</div>
 
