--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							<section class="box style1">
 								<span class="icon featured solid fa-desktop"></span>
 								<h3>Front-End</h3>
-								<p align="justify">HTML5, CSS3, JS, frameworks de CSS (bootstrap, materialize), librerias Js (Jquery), responsive design.</p>
+								<p align="justify">Alta experiencia con HTML5, CSS3 y JS. Frameworks de CSS (bootstrap, materialize), diseño UI/UX, responsive design.</p>
 							</section>
 						</div>
 
@@ -72,7 +72,7 @@
 							<section class="box style1">
 								<span class="icon solid featured solid fa-file-code"></span>
 								<h3>Back-End</h3>
-								<p align="justify">Lenguajes de Back-end PHP, Java, .NET(C#), NodeJS. Hospeo y administracion de servidores.</p>
+								<p align="justify">Lenguajes de Back-end: PHP, Java, .NET(C#), NodeJS. Hospeo y administracion de servidores. Manejo de VSCode y sus Plugins.</p>
 							</section>
 						</div>
 
@@ -80,7 +80,7 @@
 							<section class="box style1">
 								<span class="icon featured solid fa-database"></span>
 								<h3>Base de Datos</h3>
-								<p align="justify">Lenguages de Base de Datos: MySQL - SQL Server. Uso de PHP my Admin, SQL Manager Studio, HeidiSQL, etc.</p>
+								<p align="justify">Lenguages de Base de Datos: MySQL - SQL Server. Uso de PHP my Admin, SQL Manager Studio. Base de datos NoSQL (MongoDB).</p>
 							</section>
 						</div>
 
@@ -88,7 +88,7 @@
 							<section class="box style1">
 								<span class="icono featured fab fa-git-alt"></span>								
 								<h3>Control de Versiones</h3>
-								<p align="justify">Manejo de repositorios GIT, GITHUB, GITLAB (Ramas, Trabajo en equipo, Resolución de conflictos, etc.)</p>
+								<p align="justify">Manejo de repositorios GIT, GITHUB, GITLAB (ramas, trabajo en equipo, resolución de conflictos, github Pages, etc.)</p>
 							</section>
 						</div>
 
@@ -96,7 +96,7 @@
 							<section class="box style1">
 								<span class="icon featured far fa-lightbulb"></span>
 								<h3>Otros conocimientos</h3>
-								<p align="justify">POO, SOA, UML, API REST, Maven, Spring MVC & Hibernate, metodologias ágiles (SCRUM).</p>
+								<p align="justify">POO, UML, SOLID, API REST, Maven, Spring MVC & Hibernate, metodologias ágiles (SCRUM). Conseptos de Herencia, Interfaces, Polimorfismo.</p>
 							</section>
 						</div>
 
@@ -104,7 +104,7 @@
 							<section class="box style1">
 								<span class="icon featured fa-thumbs-up"></span>
 								<h3>Buenas Prácticas</h3>
-								<p align="justify">FirstMobile, Patrones de diseño (MVC, MVVM, etc), Usabilidad, Accesibilidad, Testing.</p>
+								<p align="justify">Desarrollo FirstMobile, Patrones de diseño (MVC, DAO, Singleton, Factory, etc). Conseptos de  Usabilidad, Accesibilidad y Testing.</p>
 							</section>
 						</div>
 
