cambio de colores h2

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							<section class="box style1">
 								<span class="icono featured fab fa-git-alt"></span>								
 								<h3>Control de Versiones</h3>
-								<p align="justify">Manejo de repositorios GIT, GITHUB, GITLAB (ramas, trabajo en equipo, resolución de conflictos, github Pages, etc.)</p>
+								<p align="justify">Uso de repositorios GIT, GITHUB, GITLAB (manejo de ramas, trabajo en equipo, resolución de conflictos, github Pages, etc.)</p>
 							</section>
 						</div>
 
