--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2 zoom">
 								<a href="#" id="url6" class="image featured"><img id="image6" src="" alt="" /></a>
-								<h3 id="title6"><a href="#"></a></h3>
+								<h3 id="title6"><a href="#" target="_blank></a></h3>
 								<p align="justify" id="par6"><b>Proyecto JAVA</b>, desarrollado con la tecnología MAVEN. Implementa los frameworks Spring MVC e Hibernate. La APP está pensada para que los profesional de la nutrición controlen la evolución de sus pacientes.</p>
 								<a class="source6" href="#" target="_blank" >Ver código fuente</a>
 							</article>
