--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
 
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2 zoom">
-								<a href="#" id="url6" class="image featured"><img id="image6" src="" alt="" /></a>
-								<h3 id="title6"><a href="#" target="_blank></a></h3>
-								<p align="justify" id="par6"><b>Proyecto JAVA</b>, desarrollado con la tecnología MAVEN. Implementa los frameworks Spring MVC e Hibernate. La APP está pensada para que los profesional de la nutrición controlen la evolución de sus pacientes.</p>
-								<a class="source6" href="#" target="_blank" >Ver código fuente</a>
+								<a href="#" id="url6" target="_blank" class="image featured"><img id="image6" src="" alt="" /></a>
+								<h3 id="title6">Control Nutricional</h3>
+								<p align="justify" id="par6">Proyecto JAVA desarrollado con la tecnología MAVEN. Implementa los frameworks Spring MVC e Hibernate. Esta APP no está alojada en ningún servidor.</p>
+								<a class="source6" href="#" target="_blank">Ver código fuente</a>
 							</article>
 						</div>
 
@@ -186,7 +186,7 @@
 							<article class="box style2 zoom">
 								<a href="#" id="url7" class="image featured" target="_blank"><img id="image7" src="" alt="" /></a>
 								<h3 id="title7"><a href="#"></a></h3>
-								<p align="justify" id="par7"><b>Técnico Informático</b>, desarrollado con la tecnología MAVEN. Implementa los frameworks Spring MVC e Hibernate. La APP está pensada para que los profesional de la nutrición controlen la evolución de sus pacientes.</p>
+								<p align="justify" id="par7"></p>
 								<a class="source7" href="#" target="_blank" >Ver código fuente</a>
 							</article>
 						</div>
